--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,15 +22,17 @@ env:
 # jobs
 jobs:
   build:
-    name: build (${{ matrix.scala }})
+    name: build (${{ matrix.name }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
         # supported scala versions
         include:
           - scala: 2.13.6
+            name: scala2
             test-tasks: coverage test coverageReport
           - scala: 3.0.1
+            name: scala3
             test-tasks: test # scoverage doesn’t support Scala 3
 
     steps:
