--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,9 +1,9 @@
-pull_request_erules:
+pull_request_rules:
   - name: automatic merge for main when CI passes and 1 reviews and not WIP
     conditions:
       - "#approved-reviews-by>=1"
-      - check-success=build (scala2)
-      - check-success=build (scala3)
+      - check-success=build (Scala2)
+      - check-success=build (Scala3)
       - base=main
       - label!=work-in-progress
     actions:
@@ -13,8 +13,8 @@ pull_request_erules:
   - name: automatic merge for main when CI passes and author is steward
     conditions:
       - author=scala-steward
-      - check-success=build (scala2)
-      - check-success=build (scala3)
+      - check-success=build (Scala2)
+      - check-success=build (Scala3)
       - base=main
     actions:
       merge:
