--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,16 +1,16 @@
-version = 3.0.1
-style = defaultWithAlign
+version = 3.0.3
 encoding = "UTF-8"
 runner.dialect = "scala213source3"
-maxColumn = 120
+maxColumn = 100
 
-project.excludeFilters = [ "modules/core/src/main/scala-3" ]
+project.git = true
 
 align.openParenCallSite = false
 align.openParenDefnSite = false
 align.tokens = [
   {code = "->"},
   {code = "<-"},
+  {code = "="},
   {code = "=>", owner = "Case"},
 ]
 continuationIndent.callSite = 2
