--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,6 +65,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: [build]
     if: github.event_name != 'pull_request'
     steps:
       - uses: actions/checkout@v2
