--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -24,3 +24,9 @@ rewrite.redundantBraces.stringInterpolation = true
 
 spaces.inImportCurlyBraces = false
 unindentTopLevelOperators = true
+
+fileOverride {
+  "glob:**/scala-3*/**" {
+    runner.dialect = scala3
+  }
+}
