--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,6 +18,7 @@ env:
   SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
   PGP_SECRET: ${{ secrets.PGP_SECRET }}
   PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+  SCALACTIC_FILL_FILE_PATHNAMES: "yes"
 
 # jobs
 jobs:
