--- a/.gitignore
+++ b/.gitignore
@@ -20,15 +20,15 @@ project/plugins/project/
 out/
 .idea_modules/
 atlassian-ide-plugin.xml
-
+.iml
 
 private.sbt
 
 # MODULES TARGETS
 target/
-modules/core/target/
-modules/generic/target/
+modules/core/target
+modules/generic/targetk
 /.bsp/sbt.json
 
-# CHANGELOG
+#changelog
 changelog.md
