--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,10 +40,11 @@ jobs:
       - uses: actions/checkout@v3
 
       #----------- JDK -----------
-      - name: Set up JDK 11
+      - name: Setup JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          distribution: "liberica"
+          java-version: 17
 
       #----------- CACHE -----------
       - name: Cache SBT
@@ -72,10 +73,11 @@ jobs:
       - uses: actions/checkout@v3
 
       #----------- JDK -----------
-      - name: Set up JDK 11
+      - name: Setup JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          distribution: "liberica"
+          java-version: 17
 
       #----------- CACHE -----------
       - name: Cache SBT
