--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,21 +1,38 @@
 pull_request_rules:
-  - name: automatic merge for main when CI passes and 1 reviews and not WIP
+  - name: automatic merge for master when CI passes and 1 reviews and not WIP
     conditions:
       - "#approved-reviews-by>=1"
+      - check-success=codecov/patch
+      - check-success=codecov/project
       - check-success=build (Scala2)
       - check-success=build (Scala3)
       - base=main
       - label!=work-in-progress
     actions:
       merge:
-        method: merge
+        method: rebase
         priority: high
-  - name: automatic merge for main when CI passes and author is steward
+  - name: automatic merge for master when CI passes and author is steward
     conditions:
       - author=scala-steward
+      - check-success=codecov/patch
+      - check-success=codecov/project
       - check-success=build (Scala2)
       - check-success=build (Scala3)
       - base=main
     actions:
       merge:
-        method: merge
+        method: rebase
+        priority: medium
+   - name: automatic merge for master when CI passes and author is dependabot
+    conditions:
+      - author=dependabot
+      - check-success=codecov/patch
+      - check-success=codecov/project
+      - check-success=build (Scala2)
+      - check-success=build (Scala3)
+      - base=main
+    actions:
+      merge:
+        method: rebase
+        priority: medium     
