--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,10 +30,10 @@ jobs:
         # supported scala versions
         include:
           - scala: 2.13.8
-            name: Scala2
+            name: Scala2_13
             test-tasks: test #coverage suspended due a bug
-          - scala: 3.1.3
-            name: Scala3
+          - scala: 3.2.1
+            name: Scala3_2
             test-tasks: test # scoverage doesn’t support Scala 3
 
     steps:
