--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,7 +31,7 @@ jobs:
         include:
           - scala: 2.13.10
             name: Scala2_13
-            test-tasks: test gen-doc #coverage test coverageReport gen-doc
+            test-tasks: coverage test coverageReport gen-doc
           - scala: 3.2.2
             name: Scala3_2
             test-tasks: test
